[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "piped.py_vex12853"
version = "0.1.0"
authors = [
  { name="vex12853", email="admin@vex12853.net" },
]
description = "API wrapper for Piped written in Python."
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/vex12853-sub/piped.py"
Issues = "https://github.com/vex12853-sub/piped.py/issues"
